--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -278,7 +278,7 @@ Secured 4 GPA on a scale of 4. I completed my tenth grade in Sri Mandir-Anandash
 <div class="portfolio-item padd-15" data-category="Android-studio">
 <div class="portfolio-item-inner shadow-dark">
 <div class="portfolio-img">
-<img src="images/app.png" alt="portfolio">
+<img src="images/App.png" alt="portfolio">
 </div>
 <div class="portfolio-info">
 <h4>Android studio</h4>
