--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -36,7 +36,7 @@
 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
 <li><a href="#service"><i class="fa fa-list"></i>Service</a></li>
 <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-<!-- <li><a href="#blog"><i class="fa fa-envelope"></i>Blog</a></li> -->
+<li><a href="#blog"><i class="fa fa-envelope"></i>Blog</a></li>
 <!-- <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li> -->
 </ul>
 </div>
@@ -278,7 +278,7 @@ Secured 4 GPA on a scale of 4. I completed my tenth grade in Sri Mandir-Anandash
 <div class="portfolio-item padd-15" data-category="Android-studio">
 <div class="portfolio-item-inner shadow-dark">
 <div class="portfolio-img">
-<img src="images/App.png" alt="portfolio">
+<img src="images/app.png" alt="portfolio">
 </div>
 <div class="portfolio-info">
 <h4>Android studio</h4>
@@ -318,68 +318,64 @@ Secured 4 GPA on a scale of 4. I completed my tenth grade in Sri Mandir-Anandash
 </div>
 </section>
 <!-- blog section -->
-<!-- <section class="blog section" id="blog">
+<section class="blog section" id="blog">
 <div class="container">
 <div class="row">
 <div class="section-title padd-15">
 <h2>Latest Blog</h2>
 </div>
 </div>
-<div class="row"> -->
+<div class="row">
 <!-- blog item -->
-<!-- <div class="blog-item padd-15">
+<div class="blog-item padd-15">
 <div class="blog-item-inner shadow-dark">
 <div class="blog-img">
-<img src="images/map.jpg" alt="blog">
-<div class="blog-date">
+<img src="images/post-3.jpg" alt="blog">
+<!-- <div class="blog-date">
 5 Nov 2020
-</div>
+</div> -->
 </div>
 <div class="blog-info">
-<h4 class="blog-title">Chat-bot tutorial</h4>
-<p class="blog-description">asdfghjklzxcvbnm</p>
-<p class="blog-tags">Tags : <a href="#"> chat-bot</a> , <a href="#">AI</a> , <a href="#">chatbot</a></p>
+<h4 class="blog-title">Chatbot demo</h4>
+<p class="blog-description">Code written in python.</p>
+<p class="blog-tags">  <a href="http://littletechies.pythonanywhere.com/10/"> View</a></p>
 </div>
 </div>
-</div> -->
+</div>
 <!-- blog item end -->
 <!-- blog item -->
-<!-- <div class="blog-item padd-15">
+<div class="blog-item padd-15">
 <div class="blog-item-inner shadow-dark">
 <div class="blog-img">
-<img src="images/map.jpg" alt="blog">
-<div class="blog-date">
-4 Nov 2020
-</div>
+<img src="images/m-blog-1.jpg" alt="blog">
+
 </div>
 <div class="blog-info">
-<h4 class="blog-title">How to start learning programming languages</h4>
-<p class="blog-description">asdfghjklzxcvbnm</p>
-<p class="blog-tags">Tags: <a href="#">DSA</a></p>
+<h4 class="blog-title">Pprogramming languages</h4>
+<p class="blog-description"> A guide for beginner.</p>
+<p class="blog-tags">  <a href="http://littletechies.pythonanywhere.com/2/"> Read more</a></p>
+
 </div>
 </div>
-</div> -->
+</div>
 <!-- blog item end -->
 <!-- blog item -->
-<!-- <div class="blog-item padd-15">
+<div class="blog-item padd-15">
 <div class="blog-item-inner shadow-dark">
 <div class="blog-img">
-<img src="images/map.jpg" alt="blog">
-<div class="blog-date">
-3 Nov 2020
-</div>
+<img src="images/presentation.jpg" alt="blog">
 </div>
 <div class="blog-info">
-<h4 class="blog-title">Linked list</h4>
-<p class="blog-description">asdfghjklzxcvbnm</p>
-<p class="blog-tags">Tags: <a href="#"> Data structure</a></p>
+<h4 class="blog-title">Presentation skills</h4>
+<p class="blog-description">Remember before presenting.</p>
+<p class="blog-tags"><a href="http://littletechies.pythonanywhere.com/5/"> Read more </a></p>
 </div>
 </div>
-</div> -->
+</div>
 <!-- blog item end -->
-<!-- </div>
 </div>
-</section> -->
+</div>
+</section>
 <!-- contact section -->
 <section class="contact section" id="contact">
 <div class="container">
