--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -351,7 +351,7 @@ Secured 4 GPA on a scale of 4. I completed my tenth grade in Sri Mandir-Anandash
 
 </div>
 <div class="blog-info">
-<h4 class="blog-title">Pprogramming languages</h4>
+<h4 class="blog-title">Programming languages</h4>
 <p class="blog-description"> A guide for beginner.</p>
 <p class="blog-tags">  <a href="http://littletechies.pythonanywhere.com/2/"> Read more</a></p>
 
