--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -196,15 +196,15 @@ Secured 4 GPA on a scale of 4. I completed my tenth grade in Sri Mandir-Anandash
 <div class="service-item padd-15">
 <div class="service-item-inner">
 <div class="icon"><i class="fa fa-code"></i></div>
-<h4>Web development</h4>
-<p>I am currently working for Andhra Pradesh State Road Transportation. We work on a project, "Chatbot: Automation of customer relation management". I coordinate four students under the guidance of Prof.Hari Kishan Kondaveeti (Assistant Professor at VIT-AP).</p>
+<h4>Software development</h4>
+<p>I am currently working for Andhra Pradesh State Road Transport Corporation. We are devoloping, "Chatbot for Automation of customer relation management" with expected end period : January 2021. I coordinate four other students under the guidance of Prof.Hari Kishan Kondaveeti (Assistant Professor at VIT-AP). </p>
 </div>
 </div>
 <div class="service-item padd-15">
 <div class="service-item-inner">
 <div class="icon"><i class="fa fa-id-badge"></i></div>
 <h4>Project Lead</h4>
-<p> Under the guidance of Dr.S.Gopikrishnan(Professor at VIT-AP) my team works on "Autonomous Drone System" project. We develop this project using raspberry pi. We use python language to communicate with raspberry pi.</p>
+<p> Under the guidance of Dr.S.Gopikrishnan(Professor at VIT-AP) my team works on "Autonomous Drone System" project. We develop this project using raspberry pi. Due to COVID lockdown, our project submission time has been postponed.</p>
 </div>
 </div>
 <div class="service-item padd-15">
