--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -197,7 +197,7 @@ Secured 4 GPA on a scale of 4. I completed my tenth grade in Sri Mandir-Anandash
 <div class="service-item-inner">
 <div class="icon"><i class="fa fa-code"></i></div>
 <h4>Web development</h4>
-<p>I am currently working for Andhra Pradesh State Road Transport Corporation. We are developing, "Chatbot for Automation of customer relation management" with expected end period : January 2021. I coordinate four other students under the guidance of Prof.Hari Kishan Kondaveeti (Assistant Professor at VIT-AP). </p>
+<p>I am currently working for Andhra Pradesh State Road Transport Corporation. I coordinate four other students to develop, "Chatbot for Automation of customer relation management" with expected end period : January 2021. Guide: Prof.Hari Kishan Kondaveeti (Assistant Professor at VIT-AP). </p>
 </div>
 </div>
 <div class="service-item padd-15">
